# CLIApiClient

./: .env-template  .gitignore  CMakeLists.txt  README.md  build.sh  install.sh  test.txt
src/: http_client.c  http_client.h  main.c
src/discord_rpc/: socket_connection.c  socket_connection.h
